# Gen

./: .gitignore  .tm_properties  Readme.md  cputimeout.c  current.todo  get_process_info.c  get_process_info.h  get_process_info_apple.c  get_process_info_linux.c  makefile  readme.md  settings.json  test.c  todo  toolchain
hs/: .env  .gitignore  .tm_properties  Makefile  Readme.md  Setup.hs  cabal.config  cabal.config.freeze  essence-gen.cabal  essence-testgen.cabal  gen-essence.cabal  keys.txt  log  make.sh
hs/scripts/: _gen.sh  add_new_ops.hs  add_ops_metadata.hs  clean.sh  exposed_modules_to_clipboard.sh  genEssenceDate.sh  genLogged.sh  install.sh  make_autoversion.sh  make_exposed_modules.sh  missing_ops.hs  mk_keys.hs  testSampleWrap.sh  update_exposed_modules.rb
hs/src/AST/: Data.hs  Domain.hs  Domain.hs-boot  Expr.hs  Expr.hs-boot  ExprOld.hs  FromEssence.hs  Helper.hs  Imports.hs  Literal.hs  Literal.hs-boot  Range.hs  Range.hs-boot  Spec.hs  SpecE.hs  TH.hs  ToEssence.hs  Type.hs
hs/src/Common/: Helpers.hs  Placeholders.hs
hs/src/EssenceSolver/: AllValues.hs  Checker.hs  Data.hs  EssenceSolver.hs  Solve.hs
hs/src/Example/: A.hs
hs/src/Test/: A.hs
hs/src/TestGen/: Prelude.hs  QC.hs  QCDebug.hs
hs/src/TestGen/Arbitrary/: Arbitrary.hs  Common.hs  Data.hs  Domain.hs  Expr.hs  FromNested.hs  FromNested.hs-boot  Generators.hs  Generators.hs-boot  Literal.hs  Literal.hs-boot  Op.hs  Op.hs-boot  Type.hs  TypeConversions.hs  TypeConversions.hs-boot
hs/src/TestGen/Classify/: AddMeta.hs  AddSpecE.hs  DomTypes.hs  Meta.hs  Sorter.hs
hs/src/TestGen/Essence/: Check.hs  Generate.hs  Rnd.hs  SpecE.hs
hs/src/TestGen/Helpers/: Args.hs  Debug.hs  Helpers.hs  IO.hs  Log.hs  OrderedType.hs  Placeholders.hs  QuickCheck2.hs  Runner.hs  SizeOf.hs  StandardImports.hs  Standardise.hs  TypeOf.hs
hs/src/TestGen/Old/: Args.hs  Data.hs  Debug.hs  EssenceDomain.hs  TestGen.hs
hs/src/TestGen/Reduce/: Args.hs  Data.hs  FormatResults.hs  Reduce.hs  Reduce_Debug.hs  Reduction.hs  Runner.hs  Simpler.hs  UnusedDomains.hs
hs/src/UI/: UI.hs
hs/src/exec/: EssenceGivensToFinds.hs  EssenceGivensToJson2.hs  GenMain.hs  TestSampleExample.hs  TestSampleMain.hs  TestSampleMain_debug.hs
hs/src/test/: TestsMain.hs
hs/src/test/Instance/: PointTest.hs  PointTestData.hs
hs/src/test/Solver/: SolverTest.hs
hs/tests/solver/: .gitignore  readme
hs/tests/solver/from_c/finiteGivens_set01/: finiteGivens_set01.essence
hs/tests/solver/misc/a/: a.essence
hs/tests/solver/misc/a/expected/: 1.solution
hs/tests/solver/misc/b/: b.essence
hs/tests/solver/misc/c/: c.essence
hs/tests/solver/misc/c/expected/: 1.solution
hs/tests/solver/misc/d/: d.essence
hs/tests/solver/misc/e/: e.essence
hs/tests/solver/misc/e/expected/: 1.solution
hs/tests/solver/misc/f/: f.essence
hs/tests/solver/misc/f/expected/: 1.solution
hs/tests/solver/misc/g/: g.essence
hs/tests/solver/misc/h/: h.essence
hs/tests/solver/misc/h/expected/: 000001.solution  000002.solution  000003.solution  000004.solution  000005.solution  000006.solution  000007.solution  000008.solution
hs/z/rel1/: rel1.essence
scripts/hs/: .gitignore  .projectile  .tm_properties  .vimrc  Readme.md  Setup.hs  cabal.config  essence-testgen.cabal  hs.cabal  keys.txt  make.sh  make_one_core.sh  make_quick_profile.sh  summary.sh  tmtagsHistory  w.essence  y.essence  yy.essence  z.todo
scripts/hs/scripts/: make_exposed_modules.sh  make_profile.sh  make_quick.sh  testSampleWrap.sh
scripts/hs/src/: AST  ArbitraryDomains.hs  Args.hs  Create.hs  Data.hs  Debug.hs  Essence.hs  EssenceConstraints.hs  EssenceDomain.hs  Helpers.hs  Runner.hs  Sample.hs  Test.hs  TestGen.hs  ToEssence.hs
scripts/hs/src/AST/: Data.hs  Domain.hs  Domain.hs-boot  Expr.hs  Expr.hs-boot  ExprHelpers.hs  FromEssence.hs  Imports.hs  Literal.hs  Literal.hs-boot  OpName.hs  Range.hs  Range.hs-boot  SpecE.hs  ToEssence.hs  Type.hs  Types.hs
scripts/hs/src/Common/: Helpers.hs  Placeholders.hs
scripts/hs/src/Development/: Placeholders.hs
scripts/hs/src/EssenceSolver/: AllValues.hs  Args.hs  Checker.hs  Data.hs  EssenceSolver.hs  Solve.hs
scripts/hs/src/TestGen/: ArbitraryDomains.hs  Args.hs  Create.hs  Data.hs  Debug.hs  EssenceConstraints.hs  EssenceDomain.hs  Helpers.hs  Prelude.hs  QC.hs  QCDebug.hs  QCUnused.hs  Runner.hs  SC.hs  Sample.hs  Test.hs  TestGen.hs  ToEssence.hs  ZOld.hs
scripts/hs/src/TestGen/Arbitrary/: Arbitrary.hs  Common.hs  Data.hs  Debug.hs  Domain.hs  Expr.hs  FromNested.hs  FromNested.hs-boot  Generators.hs  Generators.hs-boot  Helpers.hs  Literal.hs  Literal.hs-boot  Op.hs  Op.hs-boot  SizeOf.hs  Type.hs  TypeConversion.hs  TypeConversions.hs  TypeConversions.hs-boot
scripts/hs/src/TestGen/Arbitrary/Helpers/: Debug.hs  Helpers.hs  (+4 more)
scripts/hs/src/TestGen/Classify/: AddMeta.hs  AddSpecE.hs  DomTypes.hs  Meta.hs  Sorter.hs
scripts/hs/src/TestGen/Examples/: IOQC.hs  Lambda.hs  QC.hs  QCIdea.hs  QCRnd.hs  SC.hs  Var.hs
scripts/hs/src/TestGen/Helpers/: Args.hs  Debug.hs  Helpers.hs  Log.hs  Normalise.hs  OrderedType.hs  QuickCheck2.hs  Runner.hs  SizeOf.hs  StandardImports.hs  Standardise.hs  TypeOf.hs
scripts/hs/src/TestGen/Old/: ArbitraryDomains.hs  Args.hs  Create.hs  Data.hs  EssenceConstraints.hs  Sample.hs  TestGen.hs  ZOld.hs
scripts/hs/src/TestGen/QC/: ArbitrarySpec.hs
scripts/hs/src/TestGen/Reduce/: Args.hs  Data.hs  FormatResults.hs  Reduce.hs  Reduce_Debug.hs  Reduction.hs  Reduction_QC.hs  Runner.hs  Simpler.hs  UnusedDomains.hs
scripts/hs/src/UI/: UI.hs
scripts/hs/src/exec/: EssenceLettingsToJson.hs  EssenceSolverMain.hs  GenMain.hs  TestGenMain.hs  TestLinkMain.hs  TestReduceMain.hs  TestSampleExample.hs  TestSampleMain.hs  TestSampleMain_debug.hs  TestSampleOnlySets.hs  TestSampleQuanIdea.hs
scripts/hs/z/: a.py  types.dot  x.todo  z.todo
scripts/hs/z/bool/: bool.essence
scripts/hs/z/diff/: diff.essence
scripts/hs/z/setop/: setop.essence
scripts/hs/z/tuple/: tuple.essence
scripts/hs2/: Readme.md  hs.cabal  make.sh  make_quick.sh
scripts/hs2/specs/: stuff.essence
scripts/hs2/src/Exec/: Test.hs
(+480 files in other folders)
