name:                essence-gen
version:             3.2
synopsis:            .
description:         .
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
category:            Constraint Programming
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.20

Library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : Build_autoversion
                     , Paths_essence_gen
                     , Gen.Arbitrary.Arbitrary
                     , Gen.Arbitrary.Common
                     , Gen.Arbitrary.Data
                     , Gen.Arbitrary.Domain
                     , Gen.Arbitrary.Expr
                     , Gen.Arbitrary.FromNested
                     , Gen.Arbitrary.Generators
                     , Gen.Arbitrary.Literal
                     , Gen.Arbitrary.Op
                     , Gen.Arbitrary.Type
                     , Gen.Arbitrary.TypeConversions
                     , Gen.AST.Data
                     , Gen.AST.Domain
                     , Gen.AST.Expr
                     , Gen.AST.Imports
                     , Gen.AST.Literal
                     , Gen.AST.Spec
                     , Gen.AST.TH
                     , Gen.AST.Type
                     , Gen.Classify.AddMeta
                     , Gen.Classify.AddSpecE
                     , Gen.Classify.DomTypes
                     , Gen.Classify.Meta
                     , Gen.Classify.Sorter
                     , Gen.Essence.Data
                     , Gen.Essence.Generate
                     , Gen.Essence.Rnd
                     , Gen.Helpers.Debug
                     , Gen.Helpers.Log
                     , Gen.Helpers.OrderedType
                     , Gen.Helpers.Placeholders
                     , Gen.Helpers.QuickCheck2
                     , Gen.Helpers.SizeOf
                     , Gen.Helpers.StandardImports
                     , Gen.Helpers.Standardise
                     , Gen.Helpers.TypeOf
                     , Gen.IO.CmdArgsHelpers
                     , Gen.IO.Formats
                     , Gen.IO.TermSize
                     , Gen.IO.Toolchain
                     , Gen.IO.ToolchainData
                     , Gen.IO.ToolchainRecheck
                     , Gen.Prelude
                     , Gen.Reduce.Data
                     , Gen.Reduce.FormatResults
                     , Gen.Reduce.Reduce
                     , Gen.Reduce.Reduction
                     , Gen.Reduce.Runner
                     , Gen.Reduce.Simpler
                     , Gen.Reduce.UnusedDomains
                     , Gen.UI.UI


    build-depends    : base
                     , aeson
                     , bytestring
                     , cereal
                     , cmdargs
                     , conjure-cp
                     , containers
                     , data-default
                     , datetime
                     , derive
                     , directory
                     , dlist
                     , filepath
                     , groom
                     , hashable
                     , mtl
                     , old-locale
                     , pretty
                     , process
                     , QuickCheck
                     , random
                     , smallcheck
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , tf-random
                     , unix
                     , uniplate
                     , syb
                     , parsec

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -- -fwarn-unused-matches
       -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G

Executable gen
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : GenMain.hs
    build-depends    : essence-gen
                     , base
                     , cmdargs

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -- -fwarn-unused-matches
       -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G