name:                essence-gen
version:             3.2
synopsis:            .
description:         .
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
category:            Constraint Programming
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.20

Library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : Build_autoversion
                     , Paths_essence_gen
                     , Gen.Arbitrary.Arbitrary
                     , Gen.Arbitrary.Common
                     , Gen.Arbitrary.Data
                     , Gen.Arbitrary.Domain
                     , Gen.Arbitrary.Expr
                     , Gen.Arbitrary.FromNested
                     , Gen.Arbitrary.Generators
                     , Gen.Arbitrary.Literal
                     , Gen.Arbitrary.Op
                     , Gen.Arbitrary.Type
                     , Gen.Arbitrary.TypeConversions
                     , Gen.AST.Data
                     , Gen.AST.Imports
                     , Gen.AST.Ops
                     , Gen.AST.Spec
                     , Gen.AST.TH
                     , Gen.AST.Translate
                     , Gen.AST.Type
                     , Gen.Classify.AddMeta
                     , Gen.Classify.AddSpecE
                     , Gen.Classify.DomTypes
                     , Gen.Classify.Meta
                     , Gen.Classify.Sorter
                     , Gen.Essence.Data
                     , Gen.Essence.Generate
                     , Gen.Essence.Rnd
                     , Gen.Generalise.Data
                     , Gen.Generalise.Generalise
                     , Gen.Generalise.Runner
                     , Gen.Helpers.Debug
                     , Gen.Helpers.Log
                     , Gen.Helpers.OrderedType
                     , Gen.Helpers.Placeholders
                     , Gen.Helpers.QuickCheck2
                     , Gen.Helpers.SizeOf
                     , Gen.Helpers.StandardImports
                     , Gen.Helpers.Standardise
                     , Gen.Helpers.TypeOf
                     , Gen.IO.Formats
                     , Gen.IO.Term
                     , Gen.IO.TermSize
                     , Gen.IO.Toolchain
                     , Gen.IO.ToolchainData
                     , Gen.IO.ToolchainRecheck
                     , Gen.Prelude
                     , Gen.Reduce.Data
                     , Gen.Reduce.FormatResults
                     , Gen.Reduce.Inners
                     , Gen.Reduce.Reduce
                     , Gen.Reduce.Reduction
                     , Gen.Reduce.Runner
                     , Gen.Reduce.Simpler
                     , Gen.Reduce.UnusedDomains
                     , Gen.UI.UI


    build-depends    : base
                     , conjure-cp
                     , QuickCheck
                     , aeson
                     , bytestring
                     , cmdargs
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , groom
                     , hashable
                     , mtl
                     , parsec
                     , pretty
                     , process
                     , random
                     , syb
                     , template-haskell
                     , text
                     , tf-random
                     , time
                     , transformers
                     , uniplate
                     , unix
                     , unordered-containers


   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -fwarn-unused-matches
       -- -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G

Executable gen
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : GenMain.hs
    build-depends    : essence-gen
                     , base
                     , cmdargs
                     , containers
                     , directory
                     , time
                     , filepath

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -- -fwarn-unused-matches
       -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G


test-suite gen-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    main-is          : TestsMain.hs
    build-depends    : essence-gen
                     , conjure-cp
                     , base
                     , bytestring
                     , containers
                     , tasty
                     , tasty-ant-xml
                     , tasty-golden
                     , tasty-hunit
                     , text
                     , tasty-quickcheck
                     , pretty
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
