name:                essence-gen
version:             3.2
synopsis:            .
description:         .
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
category:            Constraint Programming
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18

Library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : Build_autoversion
                     , Paths_essence_gen
                     , Gen.Arbitrary.Arbitrary
                     , Gen.Arbitrary.Common
                     , Gen.Arbitrary.Data
                     , Gen.Arbitrary.Domain
                     , Gen.Arbitrary.Expr
                     , Gen.Arbitrary.FromNested
                     , Gen.Arbitrary.Generators
                     , Gen.Arbitrary.Literal
                     , Gen.Arbitrary.Op
                     , Gen.Arbitrary.Prelude
                     , Gen.Arbitrary.QuickCheck2
                     , Gen.Arbitrary.Type
                     , Gen.Arbitrary.TypeConversions
                     , Gen.AST.Data
                     , Gen.AST.Imports
                     , Gen.AST.Ops
                     , Gen.AST.Spec
                     , Gen.AST.TH
                     , Gen.AST.Translate
                     , Gen.Classify.AddMeta
                     , Gen.Classify.AddSpecE
                     , Gen.Classify.DomTypes
                     , Gen.Classify.Meta
                     , Gen.Classify.Sorter
                     , Gen.Classify.UpdateChoices
                     , Gen.Essence.Adjust
                     , Gen.Essence.Constant
                     , Gen.Essence.Data.Key
                     , Gen.Essence.Data.Types
                     , Gen.Essence.Domain
                     , Gen.Essence.EvalToInt
                     , Gen.Essence.Expr
                     , Gen.Essence.Generate
                     , Gen.Essence.Id
                     , Gen.Essence.Ints
                     , Gen.Essence.Literal
                     , Gen.Essence.Objective
                     , Gen.Essence.Op.And
                     , Gen.Essence.Op.Eq
                     , Gen.Essence.Op.Geq
                     , Gen.Essence.Op.Gt
                     , Gen.Essence.Op.Internal.Generated
                     , Gen.Essence.Op.Intersect
                     , Gen.Essence.Op.Leq
                     , Gen.Essence.Op.Lt
                     , Gen.Essence.Op.Mod
                     , Gen.Essence.Op.Neq
                     , Gen.Essence.Op.Or
                     , Gen.Essence.Op.Pow
                     , Gen.Essence.Op.Subset
                     , Gen.Essence.Op.SubsetEq
                     , Gen.Essence.Op.Supset
                     , Gen.Essence.Op.SupsetEq
                     , Gen.Essence.Op.TwoBars
                     , Gen.Essence.Op.Union
                     , Gen.Essence.Op
                     , Gen.Essence.Range
                     , Gen.Essence.Reduce
                     , Gen.Essence.Rnd
                     , Gen.Essence.Spec
                     , Gen.Essence.St
                     , Gen.Essence.Type
                     , Gen.Essence.UIData
                     , Gen.Generalise.Data
                     , Gen.Generalise.Generalise
                     , Gen.Generalise.Runner
                     , Gen.Helpers.Debug
                     , Gen.Helpers.InlineLettings
                     , Gen.Helpers.LineError
                     , Gen.Helpers.Log
                     , Gen.Helpers.OrderedType
                     , Gen.Helpers.Placeholders
                     , Gen.Helpers.SizeOf
                     , Gen.Helpers.Standardise
                     , Gen.Helpers.TypeOf
                     , Gen.Imports
                     , Gen.IO.Formats
                     , Gen.IO.Term
                     , Gen.IO.TermSize
                     , Gen.IO.Toolchain
                     , Gen.IO.ToolchainData
                     , Gen.IO.ToolchainRecheck
                     , Gen.Reduce.Data
                     , Gen.Reduce.FormatResults
                     , Gen.Reduce.Inners
                     , Gen.Reduce.QuanToComp
                     , Gen.Reduce.Reduce
                     , Gen.Reduce.Reduction
                     , Gen.Reduce.Runner
                     , Gen.Reduce.Simpler
                     , Gen.Reduce.UnusedDomains
                     , Gen.Solver.Enumerate
                     , Gen.Solver.Solver
                     , Gen.UI.UI


    build-depends    : base
                     , conjure-cp
                     , QuickCheck
                     , aeson
                     , bytestring
                     , cmdargs
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , groom
                     , hashable
                     , mtl
                     , parsec
                     , pretty
                     , process
                     , random
                     , syb
                     , template-haskell
                     , text
                     , tf-random
                     , time
                     , transformers
                     , uniplate
                     , unordered-containers
                     , safe
                     , neat-interpolation

    if impl(ghc < 7.10)
        build-depends: unix==2.7.0.1
    else
        build-depends: unix

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf
        FlexibleContexts
        FlexibleInstances

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -fwarn-unused-matches
       -- -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G

Executable gen
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : GenMain.hs
    build-depends    : essence-gen
                     , base
                     , cmdargs
                     , containers
                     , directory
                     , time
                     , filepath

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -- -fwarn-unused-matches
       -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G


test-suite gen-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    main-is          : TestsMain.hs
    build-depends    : essence-gen
                     , conjure-cp
                     , base
                     , bytestring
                     , containers
                     , filepath
                     , tasty
                     , tasty-ant-xml
                     , tasty-golden
                     , tasty-hunit
                     , text
                     , tasty-quickcheck
                     , pretty
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf
        FlexibleContexts
        FlexibleInstances

    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
