name:                gen-essence
version:             0.9
synopsis:            .
description:         .
License:             AllRightsReserved
author:              Bilal Syed Hussain
maintainer:          bh246@st-andrews.ac.uk
category:            Constraint Programming
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18

Library
    default-language : Haskell2010
    hs-source-dirs   : src
    --MODULES
    exposed-modules  : Build_autoversion
                     , Paths_gen_essence
                     , Gen.AST.Data
                     , Gen.AST.Imports
                     , Gen.AST.Ops
                     , Gen.AST.Spec
                     , Gen.AST.TH
                     , Gen.AST.Translate
                     , Gen.Classify.AddMeta
                     , Gen.Classify.AddSpecE
                     , Gen.Classify.CreateDbHashes
                     , Gen.Classify.DomTypes
                     , Gen.Classify.Meta
                     , Gen.Classify.Sorter
                     , Gen.Classify.UpdateChoices
                     , Gen.Essence.Adjust
                     , Gen.Essence.Carry
                     , Gen.Essence.Constant
                     , Gen.Essence.Data.Key
                     , Gen.Essence.Data.Types
                     , Gen.Essence.Domain
                     , Gen.Essence.EvalToInt
                     , Gen.Essence.Expr
                     , Gen.Essence.Generate
                     , Gen.Essence.Id
                     , Gen.Essence.Ints
                     , Gen.Essence.Literal
                     , Gen.Essence.Log
                     , Gen.Essence.Objective
                     , Gen.Essence.Op.AllDiff
                     , Gen.Essence.Op.And
                     , Gen.Essence.Op.Apart
                     , Gen.Essence.Op.Defined
                     , Gen.Essence.Op.Div
                     , Gen.Essence.Op.Eq
                     , Gen.Essence.Op.Factorial
                     , Gen.Essence.Op.Flatten
                     , Gen.Essence.Op.Freq
                     , Gen.Essence.Op.Geq
                     , Gen.Essence.Op.Gt
                     , Gen.Essence.Op.Hist
                     , Gen.Essence.Op.Iff
                     , Gen.Essence.Op.Image
                     , Gen.Essence.Op.ImageSet
                     , Gen.Essence.Op.Imply
                     , Gen.Essence.Op.In
                     , Gen.Essence.Op.Indexing
                     , Gen.Essence.Op.Internal.Generated
                     , Gen.Essence.Op.Intersect
                     , Gen.Essence.Op.Inverse
                     , Gen.Essence.Op.Leq
                     , Gen.Essence.Op.LexLeq
                     , Gen.Essence.Op.LexLt
                     , Gen.Essence.Op.Lt
                     , Gen.Essence.Op.Max
                     , Gen.Essence.Op.Min
                     , Gen.Essence.Op.Minus
                     , Gen.Essence.Op.Mod
                     , Gen.Essence.Op.Negate
                     , Gen.Essence.Op.Neq
                     , Gen.Essence.Op.Not
                     , Gen.Essence.Op.Or
                     , Gen.Essence.Op.Participants
                     , Gen.Essence.Op.Parts
                     , Gen.Essence.Op.Party
                     , Gen.Essence.Op.Pow
                     , Gen.Essence.Op.PowerSet
                     , Gen.Essence.Op.PreImage
                     , Gen.Essence.Op.Product
                     , Gen.Essence.Op.Range
                     , Gen.Essence.Op.Subset
                     , Gen.Essence.Op.SubsetEq
                     , Gen.Essence.Op.Sum
                     , Gen.Essence.Op.Supset
                     , Gen.Essence.Op.SupsetEq
                     , Gen.Essence.Op.Together
                     , Gen.Essence.Op.ToInt
                     , Gen.Essence.Op.ToMSet
                     , Gen.Essence.Op.ToRelation
                     , Gen.Essence.Op.ToSet
                     , Gen.Essence.Op.TwoBars
                     , Gen.Essence.Op.Union
                     , Gen.Essence.Op
                     , Gen.Essence.Range
                     , Gen.Essence.Reduce
                     , Gen.Essence.Rnd
                     , Gen.Essence.Spec
                     , Gen.Essence.St
                     , Gen.Essence.Type
                     , Gen.Essence.UIData
                     , Gen.Essence.Weightings
                     , Gen.Generalise.Data
                     , Gen.Generalise.Generalise
                     , Gen.Generalise.Runner
                     , Gen.Helpers.InlineLettings
                     , Gen.Helpers.LineError
                     , Gen.Helpers.Log
                     , Gen.Helpers.Placeholders
                     , Gen.Helpers.SizeOf
                     , Gen.Helpers.Str
                     , Gen.Helpers.TypeOf
                     , Gen.Imports
                     , Gen.Instance.AllSolutions
                     , Gen.Instance.BuildDependencyGraph
                     , Gen.Instance.Data
                     , Gen.Instance.Method
                     , Gen.Instance.NoRacing
                     , Gen.Instance.Nsample
                     , Gen.Instance.Point
                     , Gen.Instance.RaceRunner
                     , Gen.Instance.Results
                     , Gen.Instance.SamplingError
                     , Gen.Instance.SettingsIn
                     , Gen.Instance.SettingsOut
                     , Gen.Instance.UI
                     , Gen.Instance.Undirected
                     , Gen.IO.Dups
                     , Gen.IO.FindCompact
                     , Gen.IO.Formats
                     , Gen.IO.RunResult
                     , Gen.IO.Term
                     , Gen.IO.TermSize
                     , Gen.IO.Toolchain
                     , Gen.IO.ToolchainData
                     , Gen.IO.ToolchainRecheck
                     , Gen.Reduce.Data
                     , Gen.Reduce.FormatResults
                     , Gen.Reduce.Inners
                     , Gen.Reduce.QuanToComp
                     , Gen.Reduce.Reduce
                     , Gen.Reduce.Reduction
                     , Gen.Reduce.Runner
                     , Gen.Reduce.Simpler
                     , Gen.Reduce.TypeCheck
                     , Gen.Reduce.UnusedDomains
                     , Gen.Solver.Solver
                     , Gen.UI.UI
    --MODULES END

    build-depends    : base
                     , conjure-cp
                     , QuickCheck
                     , aeson
                     , bytestring
                     , cmdargs
                     , containers
                     , directory
                     , dlist
                     , filepath
                     , groom
                     , hashable
                     , mtl
                     , pretty
                     , process
                     , random
                     , syb
                     , template-haskell
                     , text
                     , tf-random
                     , time
                     , transformers
                     , uniplate
                     , unordered-containers
                     , safe
                     , neat-interpolation
                     , pureMD5
                     , temporary
                     , sqlite-simple
                     , shelly
                     , cryptohash
                     , megaparsec
                     , cassava
                     , vector


    if impl(ghc < 7.10)
        build-depends: unix==2.7.0.1
    else
        build-depends: unix

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf
        FlexibleContexts
        FlexibleInstances

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -fwarn-unused-matches
       -- -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G

Executable gen
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : GenMain.hs
    build-depends    : gen-essence
                     , base
                     , cmdargs
                     , containers
                     , directory
                     , time
                     , filepath

   default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables

   ghc-options:
       -fwarn-incomplete-patterns
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-signatures
       -fwarn-name-shadowing
       -fwarn-orphans
       -fwarn-overlapping-patterns
       -fwarn-tabs
       -fwarn-unused-do-bind
       -- -fno-warn-unused-matches
       -Wall
       ---Werror
       -rtsopts
       -with-rtsopts=-K200M
       -with-rtsopts=-M1G


test-suite gen-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    main-is          : TestsMain.hs
    build-depends    : gen-essence
                     , conjure-cp
                     , base
                     , bytestring
                     , containers
                     , filepath
                     , tasty
                     , tasty-ant-xml
                     , tasty-golden
                     , tasty-hunit
                     , text
                     , tasty-quickcheck
                     , pretty
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        LambdaCase
        TemplateHaskell
        RecordWildCards
        NamedFieldPuns
        MultiWayIf
        FlexibleContexts
        FlexibleInstances

    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -rtsopts
        -with-rtsopts=-K200M
        -with-rtsopts=-M1G
